[metadata]
name = python-binance-reporting
version = 0.1.0
author = Jan Abraham
author_email = jan.abraham@bluewin.ch
description = Binance Reporting Library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/JanAbraham/python-binance-reporting
project_urls =
    Bug Tracker = https://github.com/JanAbraham/python-binance-reporting/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
packages = find:
python_requires = >=3.9

[options.packages.find]
where = 



#     install_requires=["python-binance", "pandas", "logging", "telegram", "python-telegram-bot", "time", "sys", "os", "pyjaml", "yaml"],
#     keywords=['python', 'binance', 'reporting', 'crypto', 'trading', 'bot', 'mining'],
