[metadata]
name = binance-reporting
version = 0.1.0.10
author = Jan Abraham
author_email = jan.abraham@bluewin.ch
description = Binance Reporting Library
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://binance-reporting.readthedocs.io/en/latest/
project_urls =
    Documentation = https://python-binance-reporting.readthedocs.io/en/latest/
    Source Code = https://github.com/JanAbraham/python-binance-reporting
    Bug Tracker = https://github.com/JanAbraham/python-binance-reporting/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license = OSI Approved :: GNU General Public License v3 (GPLv3)
platform = Windows, Linux, MacOS
[options]
package_dir =
packages = find:
python_requires = >=3.9
install_requires =
    pyyaml
    pandas
    python-telegram-bot
    python-binance
keywords=
    python, binance, reporting, crypto, trading, bot, mining

[options.packages.find]
where = 
